# Vibedict

./: .gitignore  README.md  build_log.txt  build_log_clean.txt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-x86-release.dm
app/release/baselineProfiles/1/: app-armeabi-v7a-release.dm
app/src/androidTest/java/com/waltermelon/vibedict/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/mdict-cpp/: mdict.cc  mdict_extern.cc
app/src/main/cpp/mdict-cpp/encode/: base64.h
app/src/main/cpp/mdict-cpp/include/: fileutils.h  mdict.h  mdict_extern.h
app/src/main/java/com/waltermelon/vibedict/: MainActivity.kt  WaltermelonApp.kt
app/src/main/java/com/waltermelon/vibedict/data/: DictionaryCacheManager.kt  DictionaryManager.kt  FontUtils.kt  HexUtils.kt  MdictEngine.kt  UserPreferencesRepository.kt
app/src/main/java/com/waltermelon/vibedict/ui/theme/: Color.kt  (+3 more)
app/src/main/java/com/waltermelon/vibedict/util/: LogUtil.kt
app/src/main/res/drawable/: ic_banner_background.xml  ic_banner_foreground.xml  ic_github.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/com/waltermelon/vibedict/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
